[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
graphql_client = "0.14.0"
serde = "1.0.200"
worker = "0.2.0"
reqwest = { version = "0.12.4", features = ["json"] }
opentelemetry = { version = "=0.22.0", features = ["otel_unstable"] }
opentelemetry_sdk = { version="=0.22.1", default-features = false, features = ["trace", "metrics", "rt-tokio-current-thread"] }
opentelemetry-stdout = { version="0.3.0", default-features = false, features=["trace", "metrics"] }
getrandom = { version = "0.2.14", features = ["js"] }
serde_json = "1.0.116"
opentelemetry-http = { version="0.11.1" }
opentelemetry-otlp = { version="0.15.0", features = ["metrics", "http-proto"], default-features = false }
http = { version = "0.2.12"}

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
